--- a/docs/data_catalog/secure_access.mdx
+++ b/docs/data_catalog/secure_access.mdx
@@ -693,7 +693,7 @@ so that each operation is covered with the correct grant.
 
 | Route                                                      | Type      | Method   | User Group Permissions                  |
 |------------------------------------------------------------|-----------|----------|-----------------------------------------|
-| `/jobs/from/system/:id/direction/:direction`               | REST      | GET      | `permissions["read:data-assets"]`       |
+| `/jobs/from/dataset/:id/direction/:direction`              | REST      | GET      | `permissions["read:data-assets"]`       |
 | `/jobs/from/system/:id/direction/:direction`               | REST      | GET      | `permissions["read:data-assets"]`       |
 | `/jobs/items`                                              | REST      | POST     | `permissions["update:lineage"]`         |
 | `/jobs/items/:id`                                          | REST      | PATCH    | `permissions["update:lineage"]`         |
