--- a/docs/release-notes/v13.5.1.md
+++ b/docs/release-notes/v13.5.1.md
@@ -17,6 +17,12 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ## Console
 
+### Support for gRPC in Endpoints Configuration
+
+The Console now supports configuring gRPC communication for newly created endpoints. You can mark an endpoint as gRPC to enable HTTP/2 communication and select the container port of the connected microservice to handle gRPC traffic.
+
+For more details, refer to the related [documentation].
+
 ### Improvements
 
 ####
