--- a/docs/release-notes/v13.5.1.md
+++ b/docs/release-notes/v13.5.1.md
@@ -29,6 +29,11 @@ For more details, refer to the related [documentation].
 
 ### Bug Fix
 
+This version addressed the following bugs:
+
+* fixed an issue where the use of underscores in the Environment ID prevented namespace creation;
+* fixed an issue where malformed YAML in Infrastructure Resources resulted in unclear validation errors.
+
 ## Fast Data
 
 ### Fast Data Runtime Management
