added back-kit rn

--- a/docs/release-notes/v13.5.1.md
+++ b/docs/release-notes/v13.5.1.md
@@ -42,7 +42,19 @@ This version addressed the following bugs:
 
 ### Back-Kit Library
 
+The new version `v1.5.13` of the back-kit library is available!
+
+Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for finer-grained details of new versions.
+
+#### Improvements
+
+##### Add `method` property to `bk-import-modal`
+
+Add `method` property to `bk-import-modal` to choose which method to use for the `/import` HTTP request
+
 #### Bug Fix
+
+- Fix plus special character in url when used with bk-expanded-filters
 
 ## Marketplace
 
