--- a/docs/release-notes/v13.5.1.md
+++ b/docs/release-notes/v13.5.1.md
@@ -25,6 +25,10 @@ For more details, refer to the related [documentation].
 
 ### Improvements
 
+#### Service Accounts detail page
+
+From now on you can access the detail of a Service Account from the related section at Company level. 
+
 ####
 
 ### Bug Fix
