--- a/docs/release-notes/v13.5.1.md
+++ b/docs/release-notes/v13.5.1.md
@@ -40,7 +40,20 @@ This version addressed the following bugs:
 
 ## Fast Data
 
-### Fast Data Runtime Management
+### Fast Data Services
+
+#### Projection Storer
+
+The new version `v1.3.5` of the _Projection Storer_ is available!
+
+#### Bug Fix
+
+This version addressed a few bugs, here is a comprehensive list:
+
+* after the introduction of SSL custom configuration in v1.3.2, it was assumed that SSL was disabled
+when the ssl.enabled property was not specified. This prevents the service from connecting to database instances where SSL is active without configuring ssl.enabled to true. This release ensures that the SSL configuration is not enforced to false when not provided by the user, aligning the behavior of the service with that prior to v1.3.2.
+
+For more information check out the service [changelog](/runtime_suite/projection-storer/changelog.md).
 
 ## Microfrontend Composer
 
