added data fabric updates in RN

--- a/docs/release-notes/v13.5.1.md
+++ b/docs/release-notes/v13.5.1.md
@@ -46,7 +46,7 @@ This version addressed the following bugs:
 
 The new version `v1.3.5` of the _Projection Storer_ is available!
 
-#### Bug Fix
+##### Bug Fix
 
 This version addressed a few bugs, here is a comprehensive list:
 
@@ -54,6 +54,24 @@ This version addressed a few bugs, here is a comprehensive list:
 when the ssl.enabled property was not specified. This prevents the service from connecting to database instances where SSL is active without configuring ssl.enabled to true. This release ensures that the SSL configuration is not enforced to false when not provided by the user, aligning the behavior of the service with that prior to v1.3.2.
 
 For more information check out the service [changelog](/runtime_suite/projection-storer/changelog.md).
+
+### Fast Data Runtime Management
+
+In Fast Data Control Plane application, is now available the v0.2.1 of [Fabric BFF](/fast_data/runtime_management/control_plane_fabric_bff.mdx), a custom x509 certificate can now be added to the default root keychain of certificates for any client/reversed-proxy reached by Fabric BFF.
+
+For more information, visit the [compatibility matrix documentation page](/fast_data/runtime_management/compatibility_matrix.md#service-latest-versions) with reported the latest service versions.
+
+## Data Catalog
+
+### Data Catalog Application
+
+The Data Catalog application has been updated with small improvements and bug fixes.  
+
+#### Added
+
+In [Fabric BFF](/data_catalog/data_catalog_fabric_bff.mdx) v0.2.1 a custom x509 certificate can now be added to the default root keychain of certificates for any client/reversed-proxy reached by Fabric BFF.
+
+For more information, visit the [compatibility matrix documentation page](/data_catalog/compatibility_matrix.md) with reported the latest service versions.
 
 ## Microfrontend Composer
 
