--- a/docs/fast_data/runtime_management/control_plane_fabric_bff.mdx
+++ b/docs/fast_data/runtime_management/control_plane_fabric_bff.mdx
@@ -84,6 +84,10 @@ The following properties support [secret resolution](/fast_data/configuration/se
 - `console.auth.credentials.privateKey`
 :::
 
+A custom x509 certificate can be added to the default root keychain of certificates for any client/reversed-proxy reached by Fabric BFF.
+Custom certificate must be mounted on local file system of Fabric BFF and referenced in the configuration at 'settings.tls.certificate'
+as a [secret](/fast_data/configuration/secrets_resolution.md).
+
 #### Control Plane Communication
 
 Communication between Fabric BFF and Control Plane services occur both via [gRPC](https://grpc.io/) and HTTP REST requests. For this reason its necessary to
