--- a/docs/release-notes/v13.5.1.md
+++ b/docs/release-notes/v13.5.1.md
@@ -15,6 +15,16 @@ Console SaaS users can try out v13.5.1 latest improvements in Preview! Open a Se
 For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
 :::
 
+## New Flow Manager Configurator Layout
+
+With this release, we are introducing the new layout for the Flow Manager Configurator. By switching to the new layout, you will be able to view and manage the flow in greater detail. This includes the ability to see and add external executors involved in the flow, as well as view commands, events, and state transitions.
+
+Please note that the switch to the new layout is irreversible.
+
+![FM Configurator New Layout](img/flow-manager-configurator-new-layout.png)
+
+For more details, please refer to [the documentation](/development_suite/api-console/api-design/flow-manager-configurator/how-it-works.md)
+
 ## Console
 
 ### Support for gRPC in Endpoints Configuration
@@ -89,7 +99,7 @@ Add `method` property to `bk-import-modal` to choose which method to use for the
 
 #### Bug Fix
 
-- Fix plus special character in url when used with bk-expanded-filters
+- Fix plus special character in url when used with `bk-expanded-filters`
 
 ## Marketplace
 
