feat: update endpoint paragraph in rn

--- a/docs/release-notes/v13.5.1.md
+++ b/docs/release-notes/v13.5.1.md
@@ -27,11 +27,12 @@ For more details, please refer to [the documentation](/development_suite/api-con
 
 ## Console
 
-### Support for gRPC in Endpoints Configuration
+### Support for custom port and HTTP/2 protocol in Endpoints Configuration
 
-The Console now supports configuring gRPC communication for newly created endpoints. You can mark an endpoint as gRPC to enable HTTP/2 communication and select the container port of the connected microservice to handle gRPC traffic.
+From now on, you can create your endpoint including also the port of the service to connect to, and enable the _Downstream Protocol_, fully supporting HTTP/2 protocol.
+In this way, you can have more control on communication with your microservices, and supporting gRPC communication.
 
-For more details, refer to the related [documentation].
+For more details, refer to the related [documentation](/development_suite/api-console/api-design/endpoints.md).
 
 ### Improvements
 
@@ -56,7 +57,7 @@ This version addressed the following bugs:
 
 The new version `v1.3.5` of the _Projection Storer_ is available!
 
-##### Bug Fix
+#### Bug Fix
 
 This version addressed a few bugs, here is a comprehensive list:
 
