feat: paragraph on the AI RAG Template

--- a/docs/release-notes/v13.5.1.md
+++ b/docs/release-notes/v13.5.1.md
@@ -108,7 +108,15 @@ Add `method` property to `bk-import-modal` to choose which method to use for the
 
 ### Marketplace Updates
 
+#### AI RAG Chat
+
+The AI RAG Chat application has been updated with the service [_AI RAG Template_](https://https://github.com/mia-platform/ai-rag-template) updated to version `0.4.0` that includes:
+
+- a new endpoint to generate embeddings from your documents (text files, markdown files, PDF files or archive files)
+- support for connecting with [Azure OpenAI service](https://azure.microsoft.com/en-us/products/ai-services/openai-service)
+
+And with updates of internal dependencies in order to improve stability and reliability of the service.
+
 ## How to update your Console
 
 For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `13.9.2-beta.0`.
-
