--- a/docs/release-notes/v13.5.1.md
+++ b/docs/release-notes/v13.5.1.md
@@ -38,7 +38,8 @@ For more details, refer to the related [documentation](/development_suite/api-co
 
 #### Service Accounts detail page
 
-From now on you can access the detail of a Service Account from the related section at Company level. 
+From now on you can access the detail of a Service Account by clicking on its name from the table of the related section at Company level. 
+
 
 ####
 
