--- a/docs/release-notes/v13.5.1.md
+++ b/docs/release-notes/v13.5.1.md
@@ -21,27 +21,24 @@ With this release, we are introducing the new layout for the Flow Manager Config
 
 Please note that the switch to the new layout is irreversible.
 
-![FM Configurator New Layout](img/flow-manager-configurator-new-layout.png)
-
 For more details, please refer to [the documentation](/development_suite/api-console/api-design/flow-manager-configurator/how-it-works.md)
 
-## Console
+![FM Configurator New Layout](img/flow-manager-configurator-new-layout.png)
 
-### Support for custom port and HTTP/2 protocol in Endpoints Configuration
+## Support for custom port and HTTP/2 protocol in Endpoints Configuration
 
-From now on, you can create your endpoint including also the port of the service to connect to, and enable the _Downstream Protocol_, fully supporting HTTP/2 protocol.
-In this way, you can have more control on communication with your microservices, and supporting gRPC communication.
+From now on, you can create your Endpoints including also the port of the service to connect to, and enable the _Downstream Protocol_, fully supporting HTTP/2 protocol.
+In this way, you can have more control on communication with your Microservices, and supporting gRPC communication.
 
 For more details, refer to the related [documentation](/development_suite/api-console/api-design/endpoints.md).
+
+## Console 
 
 ### Improvements
 
 #### Service Accounts detail page
 
 From now on you can access the detail of a Service Account by clicking on its name from the table of the related section at Company level. 
-
-
-####
 
 ### Bug Fix
 
@@ -104,8 +101,6 @@ Add `method` property to `bk-import-modal` to choose which method to use for the
 - Fix plus special character in url when used with `bk-expanded-filters`
 
 ## Marketplace
-
-### New Marketplace Components
 
 ### Marketplace Updates
 
