--- a/docs/release-notes/v13.5.1.md
+++ b/docs/release-notes/v13.5.1.md
@@ -21,7 +21,7 @@ With this release, we are introducing the new layout for the Flow Manager Config
 
 Please note that the switch to the new layout is irreversible.
 
-For more details, please refer to [the documentation](/development_suite/api-console/api-design/flow-manager-configurator/how-it-works.md)
+For more details, please refer to [documentation](/development_suite/api-console/api-design/flow-manager-configurator/how-it-works.md)
 
 ![FM Configurator New Layout](img/flow-manager-configurator-new-layout.png)
 
