set up RN 13.5.1 (#1855)
* set up RN 13.5.1

* Update chart on v13.5.0.md

* added audit trail docs link to rn 13.4.0

* Update chart helm on v13.5.0.md

* Update chart helm on v13.5.1.md

* Update v13.5.1.md

* add info

* added back-kit rn

* Update v13.5.1.md

* fix audit trail docs link

* add rn of PS

* added data fabric updates in RN

* added flow manager updates

* feat: update endpoint paragraph in rn

* feat: paragraph on the AI RAG Template

* Update docs/release-notes/v13.5.1.md

* Update v13.5.1.md

* removed blank line on rbac docs

* Update v13.5.1.md

* Update v13.5.1.md

---------

Co-authored-by: jacoposte <100678585+jacoposte@users.noreply.github.com>
Co-authored-by: Claudia Focchi <claudia.focchi@mia-fintech.io>
Co-authored-by: Alberto Tessarotto <78902914+albertotessarotto@users.noreply.github.com>
Co-authored-by: ThisIsDemetrio <Demetrio Marino>

--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -5,15 +5,7 @@ sidebar_label: v13.5.0
 image: "img/release-note-link-preview.png"
 ---
 
-_December 5th, 2024_
-
-:::info
-Mia-Platform Console v13.5.0 is **now in Preview** and will be generally available on December 19th.
-
-Console SaaS users can try out v13.5.0 latest improvements in Preview! Open a Service Request to ask for the creation of a sandbox Company in case you do not have access to any Company.
-
-For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
-:::
+_December 19th, 2024_
 
 ## Data Lineage
 
@@ -107,7 +99,6 @@ Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for
 The CRUD SQL service now supports Oracle DB. You can easily integrate with an Oracle database and expose CRUD operations through HTTP with this plugin.
 You can find more information on the plugin [here](/runtime_suite/crud-postgresql/10_overview.md).
 
-
 ### Marketplace Updates
 
 #### Care Kit
@@ -151,5 +142,5 @@ This version upgrades Node.js to v20 and several dependencies, including `custom
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.9.0-beta.4`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.9.1`.
 
