--- a/docs/release-notes/v13.4.0.md
+++ b/docs/release-notes/v13.4.0.md
@@ -121,7 +121,7 @@ The first version of the Audit Trail sidecar is available now!
 
 This sidecar allows you to collect audit logs from your microservice through a shared log file and sends them to Kafka after being processed and enriched with metadata.
 
-Check the sidecar documentation for additional information about architecture, configuration and usage.
+Check the [Audit Trail sidecar documentation](/runtime_suite/audit-trail/10_overview.md) for additional information about architecture, configuration and usage.
 
 #### Care Kit
 
